# bazel-go-ethereum

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  bazel-bin  bazel-genfiles  bazel-go-ethereum  bazel-out  bazel-testlogs  deps.bzl  eth1_config.json  go.mod  go.sum  produce-block.sh  run-catalyst.sh
accounts/: BUILD.bazel
accounts/abi/: BUILD.bazel
accounts/abi/bind/: BUILD.bazel  bind_test.go
accounts/keystore/: BUILD.bazel  watch.go  watch_fallback.go
accounts/scwallet/: BUILD.bazel
accounts/usbwallet/: BUILD.bazel  trezor.go
accounts/usbwallet/trezor/: BUILD.bazel  messages.proto  types.proto
common/: BUILD.bazel
common/bitutil/: BUILD.bazel
common/compiler/: BUILD.bazel
common/fdlimit/: BUILD.bazel
common/hexutil/: BUILD.bazel
common/math/: BUILD.bazel
common/mclock/: BUILD.bazel  mclock.go  simclock.go  simclock_test.go
common/prque/: BUILD.bazel
consensus/: BUILD.bazel
consensus/clique/: BUILD.bazel  snapshot_test.go
consensus/ethash/: BUILD.bazel
consensus/misc/: BUILD.bazel
console/: BUILD.bazel
console/prompt/: BUILD.bazel
core/: BUILD.bazel  blockchain.go  genesis_test.go  state_processor.go  tx_pool.go
core/asm/: BUILD.bazel
core/bloombits/: BUILD.bazel
core/forkid/: BUILD.bazel
core/rawdb/: BUILD.bazel
core/state/: BUILD.bazel  statedb.go
core/state/pruner/: BUILD.bazel
core/state/snapshot/: BUILD.bazel
core/types/: BUILD.bazel
core/vm/: BUILD.bazel  evm.go  jump_table.go
core/vm/runtime/: BUILD.bazel
crypto/: BUILD.bazel
crypto/blake2b/: BUILD.bazel
crypto/bls12381/: BUILD.bazel
crypto/bn256/: BUILD.bazel
crypto/bn256/cloudflare/: BUILD.bazel
crypto/bn256/google/: BUILD.bazel
crypto/ecies/: BUILD.bazel
crypto/randentropy/: BUILD.bazel
crypto/secp256k1/: BUILD.bazel  curve.go  secp256.go
crypto/secp256k1/libsecp256k1/: BUILD.bazel
crypto/sha3/: BUILD.bazel
crypto/signify/: BUILD.bazel
dashboard/: BUILD.bazel  assets.go
eth/: BUILD.bazel  api_backend.go  backend.go  config.go  eth2.go  eth_test.go  handler.go
eth/catalyst/: BUILD.bazel  api.go  api_test.go  api_types.go  gen_blockparams.go  gen_ed.go
eth/downloader/: BUILD.bazel
eth/ethconfig/: BUILD.bazel
eth/fetcher/: BUILD.bazel
eth/filters/: BUILD.bazel
eth/gasprice/: BUILD.bazel
eth/protocols/eth/: BUILD.bazel
eth/protocols/snap/: BUILD.bazel
eth/tracers/: BUILD.bazel
ethclient/: BUILD.bazel  ethclient.go
ethdb/: BUILD.bazel  table.go  table_batch.go
ethdb/dbtest/: BUILD.bazel
ethdb/leveldb/: BUILD.bazel
ethdb/memorydb/: BUILD.bazel
ethstats/: BUILD.bazel
graphql/: BUILD.bazel
les/: BUILD.bazel  balance.go
les/checkpointoracle/: BUILD.bazel
les/flowcontrol/: BUILD.bazel
les/lespay/client/: BUILD.bazel
les/utils/: BUILD.bazel
les/vflux/: BUILD.bazel
les/vflux/client/: BUILD.bazel
les/vflux/server/: BUILD.bazel
light/: BUILD.bazel
metrics/: BUILD.bazel  cpu.go
metrics/exp/: BUILD.bazel
metrics/influxdb/: BUILD.bazel
metrics/librato/: BUILD.bazel
metrics/prometheus/: BUILD.bazel
miner/: BUILD.bazel  worker.go  worker_test.go
miner/stress/1559/: BUILD.bazel
miner/stress/clique/: BUILD.bazel
miner/stress/ethash/: BUILD.bazel
mobile/: BUILD.bazel
node/: BUILD.bazel  config.go  node.go
p2p/: BUILD.bazel  server.go
p2p/discover/: BUILD.bazel  common.go  lookup.go  table.go  table_util_test.go  udp.go  udp_test.go  v4_udp.go  v4_udp_test.go  v5_encoding.go  v5_radius.go  v5_ticket.go  v5_topic.go  v5_topic_test.go  v5_udp.go  v5_udp_test.go
p2p/discover/v4wire/: BUILD.bazel
p2p/discover/v5wire/: BUILD.bazel
p2p/discv5/: BUILD.bazel
p2p/dnsdisc/: BUILD.bazel
p2p/enode/: BUILD.bazel  nodedb.go  nodedb_test.go  urlv4.go  urlv4_test.go
p2p/enr/: BUILD.bazel
p2p/msgrate/: BUILD.bazel
p2p/nat/: BUILD.bazel
p2p/netutil/: BUILD.bazel
p2p/nodestate/: BUILD.bazel
p2p/protocols/: BUILD.bazel  protocol.go
p2p/rlpx/: BUILD.bazel
p2p/simulations/: BUILD.bazel
p2p/simulations/adapters/: BUILD.bazel
p2p/simulations/examples/: BUILD.bazel
p2p/simulations/pipes/: BUILD.bazel
p2p/testing/: BUILD.bazel
p2p/tracker/: BUILD.bazel
params/: BUILD.bazel  config.go
rlp/: BUILD.bazel  decode.go  decode_test.go  encode.go  encode_test.go
rpc/: BUILD.bazel  ipc_unix.go
swarm/: BUILD.bazel
swarm/api/: BUILD.bazel
swarm/api/client/: BUILD.bazel
swarm/api/http/: BUILD.bazel
swarm/bmt/: BUILD.bazel
swarm/chunk/: BUILD.bazel
swarm/fuse/: BUILD.bazel
swarm/log/: BUILD.bazel
swarm/metrics/: BUILD.bazel
swarm/multihash/: BUILD.bazel
swarm/network/: BUILD.bazel  hive_test.go  protocol.go  protocol_test.go
swarm/network/bitvector/: BUILD.bazel
swarm/network/priorityqueue/: BUILD.bazel  priorityqueue.go
swarm/network/simulation/: BUILD.bazel  kademlia_test.go
swarm/network/simulations/: BUILD.bazel
swarm/network/stream/: BUILD.bazel  snapshot_retrieval_test.go
swarm/pot/: BUILD.bazel
swarm/pss/: BUILD.bazel
swarm/pss/client/: BUILD.bazel
swarm/pss/notify/: BUILD.bazel
swarm/sctx/: BUILD.bazel
swarm/services/swap/: BUILD.bazel
swarm/shed/: BUILD.bazel
swarm/spancontext/: BUILD.bazel
swarm/state/: BUILD.bazel
swarm/storage/: BUILD.bazel
swarm/storage/encryption/: BUILD.bazel
swarm/storage/feed/: BUILD.bazel
swarm/storage/localstore/: BUILD.bazel
swarm/storage/mock/: BUILD.bazel
swarm/storage/mru/: BUILD.bazel
swarm/swap/: BUILD.bazel
swarm/testutil/: BUILD.bazel
swarm/tracing/: BUILD.bazel
swarm/version/: BUILD.bazel
tests/: BUILD.bazel
tests/fuzzers/abi/: BUILD.bazel
tests/fuzzers/bitutil/: BUILD.bazel
tests/fuzzers/bls12381/: BUILD.bazel
tests/fuzzers/difficulty/: BUILD.bazel
tests/fuzzers/keystore/: BUILD.bazel
tests/fuzzers/les/: BUILD.bazel
tests/fuzzers/rangeproof/: BUILD.bazel
tests/fuzzers/rlp/: BUILD.bazel
tests/fuzzers/runtime/: BUILD.bazel
tests/fuzzers/secp256k1/: BUILD.bazel
tests/fuzzers/stacktrie/: BUILD.bazel
tests/fuzzers/trie/: BUILD.bazel
tests/fuzzers/txfetcher/: BUILD.bazel
tests/fuzzers/vflux/: BUILD.bazel
trie/: BUILD.bazel  database.go
(+92 files in other folders)
