load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/ethereum/go-ethereum
gazelle(
    name = "gazelle",
    prefix = "github.com/ethereum/go-ethereum",
)

go_library(
    name = "go_default_library",
    srcs = ["interfaces.go"],
    importpath = "github.com/ethereum/go-ethereum",
    visibility = ["//visibility:public"],
    deps = [
        "//common:go_default_library",
        "//core/types:go_default_library",
    ],
)
