load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "accounts.go",
        "errors.go",
        "hd.go",
        "manager.go",
        "url.go",
    ],
    importpath = "github.com/ethereum/go-ethereum/accounts",
    visibility = ["//visibility:public"],
    deps = [
        "//:go_default_library",
        "//common:go_default_library",
        "//core/types:go_default_library",
        "//event:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["hd_test.go"],
    embed = [":go_default_library"],
)
