load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "big.go",
        "bytes.go",
        "debug.go",
        "format.go",
        "path.go",
        "size.go",
        "test_utils.go",
        "types.go",
    ],
    importpath = "github.com/ethereum/go-ethereum/common",
    visibility = ["//visibility:public"],
    deps = [
        "//common/hexutil:go_default_library",
        "//crypto/sha3:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "bytes_test.go",
        "main_test.go",
        "size_test.go",
        "types_test.go",
    ],
    embed = [":go_default_library"],
    deps = ["//vendor/gopkg.in/check.v1:go_default_library"],
)
