load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "consensus.go",
        "errors.go",
    ],
    importpath = "github.com/ethereum/go-ethereum/consensus",
    visibility = ["//visibility:public"],
    deps = [
        "//common:go_default_library",
        "//core/state:go_default_library",
        "//core/types:go_default_library",
        "//params:go_default_library",
        "//rpc:go_default_library",
    ],
)
