load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "block_validator.go",
        "blockchain.go",
        "blockchain_insert.go",
        "blocks.go",
        "bloom_indexer.go",
        "chain_indexer.go",
        "chain_makers.go",
        "error.go",
        "events.go",
        "evm.go",
        "gaspool.go",
        "gen_genesis.go",
        "gen_genesis_account.go",
        "genesis.go",
        "genesis_alloc.go",
        "headerchain.go",
        "state_prefetcher.go",
        "state_processor.go",
        "state_transition.go",
        "tx_cacher.go",
        "tx_journal.go",
        "tx_list.go",
        "tx_noncer.go",
        "tx_pool.go",
        "types.go",
    ],
    importpath = "github.com/ethereum/go-ethereum/core",
    visibility = ["//visibility:public"],
    deps = [
        "//common:go_default_library",
        "//common/bitutil:go_default_library",
        "//common/hexutil:go_default_library",
        "//common/math:go_default_library",
        "//common/mclock:go_default_library",
        "//common/prque:go_default_library",
        "//consensus:go_default_library",
        "//consensus/misc:go_default_library",
        "//core/bloombits:go_default_library",
        "//core/rawdb:go_default_library",
        "//core/state:go_default_library",
        "//core/state/snapshot:go_default_library",
        "//core/types:go_default_library",
        "//core/vm:go_default_library",
        "//crypto:go_default_library",
        "//ethdb:go_default_library",
        "//event:go_default_library",
        "//log:go_default_library",
        "//metrics:go_default_library",
        "//params:go_default_library",
        "//rlp:go_default_library",
        "//trie:go_default_library",
        "@com_github_hashicorp_golang_lru//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "bench_test.go",
        "block_validator_test.go",
        "blockchain_repair_test.go",
        "blockchain_sethead_test.go",
        "blockchain_snapshot_test.go",
        "blockchain_test.go",
        "chain_indexer_test.go",
        "chain_makers_test.go",
        "dao_test.go",
        "genesis_test.go",
        "headerchain_test.go",
        "rlp_test.go",
        "state_processor_test.go",
        "tx_list_test.go",
        "tx_pool_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//common:go_default_library",
        "//common/math:go_default_library",
        "//consensus:go_default_library",
        "//consensus/ethash:go_default_library",
        "//consensus/misc:go_default_library",
        "//core/rawdb:go_default_library",
        "//core/state:go_default_library",
        "//core/types:go_default_library",
        "//core/vm:go_default_library",
        "//crypto:go_default_library",
        "//ethdb:go_default_library",
        "//event:go_default_library",
        "//log:go_default_library",
        "//params:go_default_library",
        "//rlp:go_default_library",
        "//trie:go_default_library",
        "@com_github_davecgh_go_spew//spew:go_default_library",
        "@org_golang_x_crypto//sha3:go_default_library",
    ],
)
