load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "crypto.go",
        "signature_cgo.go",
        "signature_nocgo.go",
    ],
    importpath = "github.com/ethereum/go-ethereum/crypto",
    visibility = ["//visibility:public"],
    deps = [
        "//common:go_default_library",
        "//common/math:go_default_library",
        "//crypto/sha3:go_default_library",
        "//rlp:go_default_library",
    ] + select({
        "@io_bazel_rules_go//go/platform:android": [
            "//crypto/secp256k1:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:darwin": [
            "//crypto/secp256k1:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:dragonfly": [
            "//crypto/secp256k1:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:freebsd": [
            "//crypto/secp256k1:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "//crypto/secp256k1:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:nacl": [
            "//vendor/github.com/btcsuite/btcd/btcec:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:netbsd": [
            "//crypto/secp256k1:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:openbsd": [
            "//crypto/secp256k1:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:plan9": [
            "//crypto/secp256k1:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:solaris": [
            "//crypto/secp256k1:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:windows": [
            "//crypto/secp256k1:go_default_library",
        ],
        "//conditions:default": [],
    }),
)

go_test(
    name = "go_default_test",
    srcs = [
        "crypto_test.go",
        "signature_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//common:go_default_library",
        "//common/hexutil:go_default_library",
        "//common/math:go_default_library",
    ],
)
