load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "assets.go",
        "config.go",
        "cpu.go",
        "cpu_windows.go",
        "dashboard.go",
        "geoip.go",
        "log.go",
        "message.go",
        "peers.go",
        "system.go",
    ],
    importpath = "github.com/ethereum/go-ethereum/dashboard",
    visibility = ["//visibility:public"],
    deps = [
        "//log:go_default_library",
        "//metrics:go_default_library",
        "//p2p:go_default_library",
        "//params:go_default_library",
        "//rpc:go_default_library",
        "@com_github_apilayer_freegeoip//:go_default_library",
        "@com_github_elastic_gosigar//:go_default_library",
        "@com_github_mohae_deepcopy//:go_default_library",
        "@com_github_rjeczalik_notify//:go_default_library",
        "@org_golang_x_net//websocket:go_default_library",
    ],
)
