load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "ethclient.go",
        "signer.go",
    ],
    importpath = "github.com/ethereum/go-ethereum/ethclient",
    visibility = ["//visibility:public"],
    deps = [
        "//:go_default_library",
        "//common:go_default_library",
        "//common/hexutil:go_default_library",
        "//core/types:go_default_library",
        "//rlp:go_default_library",
        "//rpc:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["ethclient_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//:go_default_library",
        "//common:go_default_library",
        "//consensus/ethash:go_default_library",
        "//core:go_default_library",
        "//core/rawdb:go_default_library",
        "//core/types:go_default_library",
        "//crypto:go_default_library",
        "//eth:go_default_library",
        "//node:go_default_library",
        "//params:go_default_library",
    ],
)
