load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "database.go",
        "interface.go",
        "memory_database.go",
    ],
    importpath = "github.com/ethereum/go-ethereum/ethdb",
    visibility = ["//visibility:public"],
    deps = [
        "//common:go_default_library",
        "//log:go_default_library",
        "//metrics:go_default_library",
        "//vendor/github.com/syndtr/goleveldb/leveldb:go_default_library",
        "//vendor/github.com/syndtr/goleveldb/leveldb/errors:go_default_library",
        "//vendor/github.com/syndtr/goleveldb/leveldb/filter:go_default_library",
        "//vendor/github.com/syndtr/goleveldb/leveldb/iterator:go_default_library",
        "//vendor/github.com/syndtr/goleveldb/leveldb/opt:go_default_library",
        "//vendor/github.com/syndtr/goleveldb/leveldb/util:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["database_test.go"],
    embed = [":go_default_library"],
)
