load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "batch.go",
        "database.go",
        "iterator.go",
        "table.go",
        "table_batch.go",
    ],
    importpath = "github.com/ethereum/go-ethereum/ethdb",
    visibility = ["//visibility:public"],
)
