load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["ethstats.go"],
    importpath = "github.com/ethereum/go-ethereum/ethstats",
    visibility = ["//visibility:public"],
    deps = [
        "//common:go_default_library",
        "//common/mclock:go_default_library",
        "//consensus:go_default_library",
        "//core:go_default_library",
        "//core/types:go_default_library",
        "//eth/downloader:go_default_library",
        "//eth/protocols/eth:go_default_library",
        "//event:go_default_library",
        "//les:go_default_library",
        "//log:go_default_library",
        "//miner:go_default_library",
        "//node:go_default_library",
        "//p2p:go_default_library",
        "//rpc:go_default_library",
        "@com_github_gorilla_websocket//:go_default_library",
    ],
)
