load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "graphiql.go",
        "graphql.go",
        "schema.go",
        "service.go",
    ],
    importpath = "github.com/ethereum/go-ethereum/graphql",
    visibility = ["//visibility:public"],
    deps = [
        "//:go_default_library",
        "//common:go_default_library",
        "//common/hexutil:go_default_library",
        "//core/rawdb:go_default_library",
        "//core/state:go_default_library",
        "//core/types:go_default_library",
        "//core/vm:go_default_library",
        "//eth/filters:go_default_library",
        "//internal/ethapi:go_default_library",
        "//node:go_default_library",
        "//rlp:go_default_library",
        "//rpc:go_default_library",
        "@com_github_graph_gophers_graphql_go//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["graphql_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//common:go_default_library",
        "//consensus/ethash:go_default_library",
        "//core:go_default_library",
        "//eth:go_default_library",
        "//miner:go_default_library",
        "//node:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
