load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "api_backend.go",
        "backend.go",
        "bloombits.go",
        "distributor.go",
        "execqueue.go",
        "fetcher.go",
        "handler.go",
        "metrics.go",
        "odr.go",
        "odr_requests.go",
        "peer.go",
        "protocol.go",
        "randselect.go",
        "retrieve.go",
        "server.go",
        "serverpool.go",
        "sync.go",
        "txrelay.go",
    ],
    importpath = "github.com/ethereum/go-ethereum/les",
    visibility = ["//visibility:public"],
    deps = [
        "//accounts:go_default_library",
        "//common:go_default_library",
        "//common/bitutil:go_default_library",
        "//common/hexutil:go_default_library",
        "//common/math:go_default_library",
        "//common/mclock:go_default_library",
        "//consensus:go_default_library",
        "//core:go_default_library",
        "//core/bloombits:go_default_library",
        "//core/rawdb:go_default_library",
        "//core/state:go_default_library",
        "//core/types:go_default_library",
        "//core/vm:go_default_library",
        "//crypto:go_default_library",
        "//crypto/secp256k1:go_default_library",
        "//eth:go_default_library",
        "//eth/downloader:go_default_library",
        "//eth/filters:go_default_library",
        "//eth/gasprice:go_default_library",
        "//ethdb:go_default_library",
        "//event:go_default_library",
        "//internal/ethapi:go_default_library",
        "//les/flowcontrol:go_default_library",
        "//light:go_default_library",
        "//log:go_default_library",
        "//metrics:go_default_library",
        "//node:go_default_library",
        "//p2p:go_default_library",
        "//p2p/discover:go_default_library",
        "//p2p/discv5:go_default_library",
        "//params:go_default_library",
        "//rlp:go_default_library",
        "//rpc:go_default_library",
        "//trie:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "distributor_test.go",
        "execqueue_test.go",
        "handler_test.go",
        "helper_test.go",
        "odr_test.go",
        "randselect_test.go",
        "request_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//common:go_default_library",
        "//common/math:go_default_library",
        "//consensus/ethash:go_default_library",
        "//core:go_default_library",
        "//core/rawdb:go_default_library",
        "//core/state:go_default_library",
        "//core/types:go_default_library",
        "//core/vm:go_default_library",
        "//crypto:go_default_library",
        "//eth:go_default_library",
        "//eth/downloader:go_default_library",
        "//ethdb:go_default_library",
        "//event:go_default_library",
        "//les/flowcontrol:go_default_library",
        "//light:go_default_library",
        "//p2p:go_default_library",
        "//p2p/discover:go_default_library",
        "//params:go_default_library",
        "//rlp:go_default_library",
        "//trie:go_default_library",
    ],
)
