load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "api.go",
        "api_backend.go",
        "benchmark.go",
        "bloombits.go",
        "client.go",
        "client_handler.go",
        "clientpool.go",
        "commons.go",
        "costtracker.go",
        "distributor.go",
        "enr_entry.go",
        "fetcher.go",
        "metrics.go",
        "odr.go",
        "odr_requests.go",
        "peer.go",
        "protocol.go",
        "pruner.go",
        "retrieve.go",
        "server.go",
        "server_handler.go",
        "serverpool.go",
        "servingqueue.go",
        "sync.go",
        "test_helper.go",
        "txrelay.go",
        "ulc.go",
    ],
    importpath = "github.com/ethereum/go-ethereum/les",
    visibility = ["//visibility:public"],
    deps = [
        "//accounts:go_default_library",
        "//accounts/abi/bind:go_default_library",
        "//accounts/abi/bind/backends:go_default_library",
        "//common:go_default_library",
        "//common/bitutil:go_default_library",
        "//common/hexutil:go_default_library",
        "//common/math:go_default_library",
        "//common/mclock:go_default_library",
        "//common/prque:go_default_library",
        "//consensus:go_default_library",
        "//consensus/ethash:go_default_library",
        "//contracts/checkpointoracle/contract:go_default_library",
        "//core:go_default_library",
        "//core/bloombits:go_default_library",
        "//core/rawdb:go_default_library",
        "//core/state:go_default_library",
        "//core/types:go_default_library",
        "//core/vm:go_default_library",
        "//crypto:go_default_library",
        "//eth:go_default_library",
        "//eth/downloader:go_default_library",
        "//eth/fetcher:go_default_library",
        "//eth/filters:go_default_library",
        "//eth/gasprice:go_default_library",
        "//ethclient:go_default_library",
        "//ethdb:go_default_library",
        "//event:go_default_library",
        "//internal/ethapi:go_default_library",
        "//les/checkpointoracle:go_default_library",
        "//les/flowcontrol:go_default_library",
        "//les/lespay/client:go_default_library",
        "//les/lespay/server:go_default_library",
        "//les/utils:go_default_library",
        "//light:go_default_library",
        "//log:go_default_library",
        "//metrics:go_default_library",
        "//node:go_default_library",
        "//p2p:go_default_library",
        "//p2p/discv5:go_default_library",
        "//p2p/dnsdisc:go_default_library",
        "//p2p/enode:go_default_library",
        "//p2p/enr:go_default_library",
        "//p2p/nodestate:go_default_library",
        "//params:go_default_library",
        "//rlp:go_default_library",
        "//rpc:go_default_library",
        "//trie:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "api_test.go",
        "clientpool_test.go",
        "distributor_test.go",
        "fetcher_test.go",
        "handler_test.go",
        "odr_test.go",
        "peer_test.go",
        "pruner_test.go",
        "request_test.go",
        "serverpool_test.go",
        "sync_test.go",
        "ulc_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//accounts/abi/bind:go_default_library",
        "//common:go_default_library",
        "//common/hexutil:go_default_library",
        "//common/math:go_default_library",
        "//common/mclock:go_default_library",
        "//consensus/ethash:go_default_library",
        "//core:go_default_library",
        "//core/rawdb:go_default_library",
        "//core/state:go_default_library",
        "//core/types:go_default_library",
        "//core/vm:go_default_library",
        "//crypto:go_default_library",
        "//eth:go_default_library",
        "//eth/downloader:go_default_library",
        "//ethdb:go_default_library",
        "//ethdb/memorydb:go_default_library",
        "//les/flowcontrol:go_default_library",
        "//les/lespay/client:go_default_library",
        "//les/lespay/server:go_default_library",
        "//light:go_default_library",
        "//log:go_default_library",
        "//node:go_default_library",
        "//p2p:go_default_library",
        "//p2p/enode:go_default_library",
        "//p2p/enr:go_default_library",
        "//p2p/nodestate:go_default_library",
        "//p2p/simulations:go_default_library",
        "//p2p/simulations/adapters:go_default_library",
        "//params:go_default_library",
        "//rlp:go_default_library",
        "//rpc:go_default_library",
        "//trie:go_default_library",
        "@com_github_mattn_go_colorable//:go_default_library",
    ],
)
