load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "lightchain.go",
        "nodeset.go",
        "odr.go",
        "odr_util.go",
        "postprocess.go",
        "trie.go",
        "txpool.go",
    ],
    importpath = "github.com/ethereum/go-ethereum/light",
    visibility = ["//visibility:public"],
    deps = [
        "//common:go_default_library",
        "//common/bitutil:go_default_library",
        "//consensus:go_default_library",
        "//core:go_default_library",
        "//core/rawdb:go_default_library",
        "//core/state:go_default_library",
        "//core/types:go_default_library",
        "//crypto:go_default_library",
        "//ethdb:go_default_library",
        "//event:go_default_library",
        "//log:go_default_library",
        "//params:go_default_library",
        "//rlp:go_default_library",
        "//trie:go_default_library",
        "//vendor/github.com/hashicorp/golang-lru:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "lightchain_test.go",
        "odr_test.go",
        "trie_test.go",
        "txpool_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//common:go_default_library",
        "//common/math:go_default_library",
        "//consensus/ethash:go_default_library",
        "//core:go_default_library",
        "//core/rawdb:go_default_library",
        "//core/state:go_default_library",
        "//core/types:go_default_library",
        "//core/vm:go_default_library",
        "//crypto:go_default_library",
        "//ethdb:go_default_library",
        "//params:go_default_library",
        "//rlp:go_default_library",
        "//trie:go_default_library",
        "//vendor/github.com/davecgh/go-spew/spew:go_default_library",
    ],
)
